# function_analyzer

./: .dockerignore  Cargo.toml  Containerfile  README.md
.github/workflows/: ci-cd.yml  publish-ghcr.yml
src/: functions.rs  lib.rs  main.rs  polynomials.rs
src/core/: traits.rs  types.rs
src/functions/: piecewise.rs  polynomial.rs  radical.rs  rational.rs
