[package]
name = "function_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder"] }
thiserror = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"